package org.example.contants;

public enum MoneyCurrencyType {
    USD, UAH;
}
