package org.example.contants;

public enum PocketTransactionType {
    DEPOSIT, BONUS_ACCRUAL, WITHDRAW, BET, WIN, BONUS_BET, BONUS_WIN, BONUS_PAYOUT;
}
