package org.example.contants;

public enum PocketType {
    FIAT, CRYPTO, FREEZE, BONUS
}
